...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_features">

            <!-- Get Started Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_get_started"
                style="@style/VibeHealth.Button.Primary"
                android:layout_width="match_parent"
                android:text="@string/get_started" />

        </FrameLayout>

...
